# PyTend-Crypto

./: .gitignore  README.md  pyproject.toml
tend/crypto/: ed25519.py  merkle.py  sha256.py
tend/crypto/csp/: __init__.py  hash.py  keys.py  opts.py
tests/: test_ed25519.py
