[build-system]
requires = ["setuptools>=61.00", "setuptools_scm[toml]>=5", "wheel", "pytest"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
tag_regex = '''^(?:[\w-]+)?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'''

[tool.setuptools.packages.find]
include = ["tend*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project]
name = "PyTend-Crypto"
dynamic = ["version"]
description = "This package contains cryptographic provider for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=39.0.0",
]
